--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ main {
   padding: 20px;
 }
 header .center {
-  background-image: url(images/bg.jpg);
+  background-image: url(images/bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -139,7 +139,7 @@ header .center {
   border-radius: 5px;
 }
 header .center figure {
-  background-image: url(images/intro.jpg);
+  background-image: url(images/intro.png);
   width: 260px;
   background-repeat: no-repeat;
   background-position: center;
@@ -208,7 +208,7 @@ header .center .wrap ul li a:hover {
   border: solid 2px #666565;
 }
 header .center .wrap .mail {
-  background-image: url(images/mail.png);
+  background-image: url(images/mail2.png);
   background-repeat: no-repeat;
   background-position: center;
   height: 60px;
@@ -238,7 +238,7 @@ nav {
   padding: 40px 0 0 0;
 }
 nav .center {
-  background-image: url(images/bg.jpg);
+  background-image: url(images/bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -271,7 +271,7 @@ nav .center ul .abarre {
 }
 .nav-fix {
   position: fixed;
-  background-image: url(images/Bg.jpg);
+  background-image: url(images/Bg.png);
   background-repeat: no-repeat;
   background-position: center;
   right: 40px;
@@ -298,7 +298,7 @@ nav .center ul .abarre {
   background-image: url(images/UpNav.png);
 }
 .nav-fix ul .sites {
-  background-image: url(images/PictoSiteNav.png);
+  background-image: url(images/PictoSiteNav2.png);
 }
 .nav-fix ul .logos {
   background-image: url(images/PictoLogoNav.png);
