--- a/style.less
+++ b/style.less
@@ -131,7 +131,7 @@ main {
 
 header {
     .center {
-        background-image: url(images/bg.jpg);
+        background-image: url(images/bg.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -140,7 +140,7 @@ header {
         border-radius: 5px;
         
         figure {
-            background-image: url(images/intro.jpg);
+            background-image: url(images/intro.png);
             //width: ~"calc(27.5% - 0px)";
             width: 260px;
             background-repeat: no-repeat;
@@ -218,7 +218,7 @@ header {
             }
             
             .mail {
-                background-image: url(images/mail.png);
+                background-image: url(images/mail2.png);
                 background-repeat: no-repeat;
                 background-position: center;
                 height: 60px;
@@ -257,7 +257,7 @@ header {
 nav {
     padding: 40px 0 0 0;
     .center {
-        background-image: url(images/bg.jpg);
+        background-image: url(images/bg.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -295,7 +295,7 @@ nav {
 
 .nav-fix {
     position: fixed;
-    background-image: url(images/Bg.jpg);
+    background-image: url(images/Bg.png);
     background-repeat: no-repeat;
     background-position: center;
     right: 40px;
@@ -345,7 +345,7 @@ nav {
     .center {
         .boxs {
             .logo figure {
-                background-image: url(images/pictosite.png);
+                background-image: url(images/pictosite2.png);
             }
             
             .shark {
