--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ nav .center ul .abarre {
   padding: 40px 0 0 0;
 }
 .sites .center .boxs .logo figure {
-  background-image: url(images/Pictosite.png);
+  background-image: url(images/PictoSite.png);
 }
 .sites .center .boxs .shark {
   background-image: url(images/bg/bg1.png);
@@ -520,7 +520,7 @@ nav .center ul .abarre {
   margin: 0 0 40px 0;
 }
 .footbook .center {
-  background-image: url(images/bg.jpg);
+  background-image: url(images/Bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
