--- a/style.less
+++ b/style.less
@@ -345,7 +345,7 @@ nav {
     .center {
         .boxs {
             .logo figure {
-                background-image: url(images/Pictosite.png);
+                background-image: url(images/PictoSite.png);
             }
             
             .shark {
